Changed Icons and Stuff

--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -6,13 +6,13 @@
 
 version=${project.version}
 agentName=Minecraft
-offlinePlayerName=JezTritsusa
+offlinePlayerName=Not_Steve
 versionManifestUrl=https://launchermeta.mojang.com/mc/game/version_manifest.json
 librariesSource=https://libraries.minecraft.net/
 assetsSource=http://resources.download.minecraft.net/
 yggdrasilAuthUrl=https://authserver.mojang.com/authenticate
 resetPasswordUrl=https://minecraft.net/resetpassword
 
-newsUrl=http://launcher.skyheroes.pl/news.html?version=%s
-packageListUrl=http://launcher.skyheroes.pl/packages.php?key=%s
-selfUpdateUrl=http://launcher.skyheroes.pl/update/latest.json
+newsUrl=https://M0RGaming.github.io/M0Rs-Launcher/news.html
+packageListUrl=https://M0RGaming.github.io/M0Rs-Launcher/packages.json
+selfUpdateUrl=https://M0RGaming.github.io/M0Rs-Launcher/update/latest.json
